// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentChatHeader > renders correctly and matches snapshot when showing stop button 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "borderBottom": "1px solid #d6d6d6",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "relative",
    }
  }
>
  <span
    className="fui-Subtitle2 fui-Text ___i24qii0_1tsayoq fk6fouc fod5ikn faaz57k fl43uef fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
    style={
      {
        "marginLeft": "10px",
      }
    }
  >
    Test Title
  </span>
  <div
    className="msla-agent-chat-header-buttons"
  >
    <button
      aria-label="Stop"
      className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
      data-automation-id="msla-agent-chat-header-stop"
      id="msla-agent-chat-header-stop"
      onClick={[Function]}
      title="Stop chat"
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
    <button
      aria-label="Refresh"
      className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
      data-automation-id="msla-agent-chat-header-refresh"
      id="msla-agent-chat-header-refresh"
      onClick={[Function]}
      title="Refresh chat"
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
    <button
      aria-label="Collapse"
      className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
      data-automation-id="msla-agent-chat-header-collapse"
      id="msla-agent-chat-header-collapse"
      onClick={[Function]}
      title="Collapse chat panel"
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`AgentChatHeader > renders correctly and matches snapshot with dark mode off 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "borderBottom": "1px solid #d6d6d6",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "relative",
    }
  }
>
  <span
    className="fui-Subtitle2 fui-Text ___i24qii0_1tsayoq fk6fouc fod5ikn faaz57k fl43uef fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
    style={
      {
        "marginLeft": "10px",
      }
    }
  >
    Test Title
  </span>
  <div
    className="msla-agent-chat-header-buttons"
  >
    <button
      aria-label="Refresh"
      className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
      data-automation-id="msla-agent-chat-header-refresh"
      id="msla-agent-chat-header-refresh"
      onClick={[Function]}
      title="Refresh chat"
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
    <button
      aria-label="Collapse"
      className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
      data-automation-id="msla-agent-chat-header-collapse"
      id="msla-agent-chat-header-collapse"
      onClick={[Function]}
      title="Collapse chat panel"
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`AgentChatHeader > renders correctly when dark mode is on 1`] = `
<div
  style={
    {
      "alignItems": "center",
      "borderBottom": "1px solid #d6d6d6",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "10px",
      "position": "relative",
    }
  }
>
  <span
    className="fui-Subtitle2 fui-Text ___i24qii0_1tsayoq fk6fouc fod5ikn faaz57k fl43uef fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
    style={
      {
        "marginLeft": "10px",
      }
    }
  >
    Test Title
  </span>
  <div
    className="msla-agent-chat-header-buttons"
  >
    <button
      aria-label="Refresh"
      className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
      data-automation-id="msla-agent-chat-header-refresh"
      id="msla-agent-chat-header-refresh"
      onClick={[Function]}
      title="Refresh chat"
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
    <button
      aria-label="Collapse"
      className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
      data-automation-id="msla-agent-chat-header-collapse"
      id="msla-agent-chat-header-collapse"
      onClick={[Function]}
      title="Collapse chat panel"
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <span
          data-testid="fluent-icon"
        />
      </span>
    </button>
  </div>
</div>
`;
